# hoops

./: README.md  pyproject.toml
basketball_sim/: __main__.py
basketball_sim/ai/: defensive_ai.py
basketball_sim/core/: engine.py  grid.py  mod_loader.py  types.py
basketball_sim/data/badges/: badges.json
basketball_sim/data/moves/: dribble_moves.json
basketball_sim/data/rules/: fiba_rules.json  nba_rules.json  ncaa_rules.json
basketball_sim/data/schemes/: defensive_schemes.json
basketball_sim/modifiers/: mental_updater.py  psychology.py
basketball_sim/narration/: stats_tracker.py
basketball_sim/resolvers/: dribble.py  pass_action.py  rebound.py  shoot.py
docs/: code-audit.md
tests/: test_integration.py  test_narration.py  test_phase6.py  test_review_followups.py
