[project]
name = "basketball-sim"
version = "0.1.0"
description = "The world's most realistic basketball simulator"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["basketball_sim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
